# image-retrieval

./: .env.example  .gitignore  CLAUDE.md  README.md  agent_tools.py  flask_app.py  image_feature_extract.py  image_index_builder.py  incremental_index_manager.py  llm_interface.py  pyproject.toml  rag_engine.py  retrieval_by_faiss.py
config/: base_config.py
demos/: 00_lsh_demo.py  01_faiss_demo.py  02_pq_benchmark.py  03_ivfpq_benchmark.py  faiss_datasets.py  test.py
docs/plans/: 2026-03-25-incremental-index-design.md  2026-03-25-incremental-index-implementation.md
docs/technical/: 01-architecture-overview.md  02-core-system-design.md  03-key-algorithms.md  04-core-concepts-for-beginners.md  05-interview-preparation.md  README.md
my_utils/: utils.py
templates/: index.html
tests/: test_end_to_end.py  test_image_index_builder.py  test_incremental_index_manager.py  test_index_add.py
